# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  pyci.yaml
gendiff/: __init__.py  calculate.py  cli.py  exception.py  extension.py  formatter.py  gendiff.py  generate_diff.py  parse.py  parser.py  root.py
gendiff/format/: choice_format.py  format_plain.py  formatting.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  format_stylish.py  stylish.py
gendiff/module/: gendiff.py
gendiff/modules/: parser.py
gendiff/scripts/: gendiff.py
tests/: _test_format.py  format.py  test_diff_formats.py  test_format.py  test_json.py  test_plain.py  test_stylish.py  test_utils.py
tests/fixtures/: 1.txt  except_result_diff.txt  except_result_diff_json.txt  except_result_json.txt
